--- a/MovieBooking/MovieBookingSPA/src/app/main-page/sidebar/sidebar.component.css
+++ b/MovieBooking/MovieBookingSPA/src/app/main-page/sidebar/sidebar.component.css
@@ -37,6 +37,7 @@
       width: 100%;
       height: auto;
       position: relative;
+      padding-top: 0px;
     }
     #sidebar a {float: left;}
     div.content {margin-left: 0;}
